# desidatamodel

./: .coveragerc  .gitignore  .mailmap  .readthedocs.yml  .travis.yml  LICENSE.rst  MANIFEST.in  README.rst  foo.rst  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
doc/: Makefile  api.rst  bitmasks.rst  changes.rst  column_descriptions.csv  conf.py  datamodel.rst  envvar.rst  index.rst  rtd-requirements.txt  sdR.rst  spPlate.rst  units.rst
doc/DESIMODEL/: index.rst
doc/DESIMODEL/data/: desi.rst  index.rst
doc/DESISURVEY_OUTPUT/: ephem.rst  exposures.rst  index.rst  planner.rst  scheduler.rst  stats.rst  surveyinit.rst
doc/DESI_LSS/: index.rst
doc/DESI_LSS/specprod/: Alltiles.rst  Alltiles_random.rst  index.rst  tarspecwdup.rst  tarwdup.rst  wdupspec_random.rst
doc/DESI_LSS_EDA/: index.rst
doc/DESI_LSS_EDA/release/: index.rst
doc/DESI_LSS_EDA/survey/: index.rst
doc/DESI_LSS_EDR/: index.rst
doc/DESI_LSS_EDR/survey/: index.rst
doc/DESI_ROOT/: index.rst
doc/DESI_ROOT/survey/: index.rst
doc/DESI_ROOT/vac/: index.rst
doc/DESI_SPECTRO_CALIB/: fluxcalib-CAMERA.rst  index.rst
doc/DESI_SPECTRO_CALIB/spec/: index.rst
doc/DESI_SPECTRO_DATA/: index.rst
doc/DESI_SPECTRO_DATA/NIGHT/: desi-EXPID.rst  fibermap-EXPID.rst  gfa-EXPID.rst  index.rst
doc/DESI_SPECTRO_REDUX/: index.rst
doc/DESI_SPECTRO_REDUX/PRODNAME/: index.rst  versions.json.rst
doc/DESI_SPECTRO_REDUX/SPECPROD/: exposures-SPECPROD.rst  index.rst  (+2 more)
doc/DESI_SPECTRO_REDUX/SPECPROD-everest/: exposures-SPECPROD.rst
doc/DESI_SPECTRO_SIM/: index.rst
doc/DESI_SURVEY/: index.rst
doc/DESI_SURVEYOPS/: index.rst
doc/DESI_TARGET/: gfas.rst  index.rst  mtl.rst  pixweight.rst  randoms.rst  skies.rst  sky.rst  stdstar.rst  targets-dr3.rst  targets-dr7.rst  targets-dr8.rst  targets.rst  truth.rst
doc/PROTODESI/: index.rst
doc/PROTODESI_DATA/: PROTODESI_FPC.rst  index.rst  pdFPC.rst  pdFVC.rst  pdGFA.rst
doc/PROTODESI_LOGS/: index.rst
doc/QUICKLOOK/: index.rst  qa-countbins-CAMERA-EXPID.rst  qa-countpix-CAMERA-EXPID.rst  qa-getbias-CAMERA-EXPID.rst  qa-getrms-CAMERA-EXPID.rst  qa-int-CAMERA-EXPID.rst  qa-integ-CAMERA-EXPID.rst  qa-sky-CAMERA-EXPID.rst  qa-skycont-CAMERA-EXPID.rst  qa-skypeak-CAMERA-EXPID.rst  qa-skyresid-CAMERA-EXPID.rst  qa-snr-CAMERA-EXPID.rst  qa-xwsigma-CAMERA-EXPID.rst  qa-xysigma-CAMERA-EXPID.rst  ql-checkHDUs-CAMERA-EXPID.rst  ql-checkfibflat-CAMERA-EXPID.rst  ql-checkres-CAMERA-EXPID.rst  ql-countbins-CAMERA-EXPID.rst  ql-countpix-CAMERA-EXPID.rst  ql-getbias-CAMERA-EXPID.rst  ql-getrms-CAMERA-EXPID.rst  ql-integ-CAMERA-EXPID.rst  ql-mergedQA-CAMERA-EXPID.rst  ql-skyRband-CAMERA-EXPID.rst  ql-skycont-CAMERA-EXPID.rst  ql-skypeak-CAMERA-EXPID.rst  ql-skyresid-CAMERA-EXPID.rst  ql-snr-CAMERA-EXPID.rst  ql-trace-CAMERA-EXPID.rst  ql-xwsigma-CAMERA-EXPID.rst  snr_qa.rst
doc/SURVEYOPS/: index.rst
doc/_static/: desidatamodel.css
doc/api/: stub.rst
doc/examples/: badModel.rst  index.rst  sdR.rst  spPlate.rst
doc/imaging/: index.rst
doc/nb/: FitsverifyAll.ipynb
etc/: desiDataModel.module  desidatamodel.module  template.html  travis_env_common.sh
py/desiDataModel/: __init__.py
py/desidatamodel/: __init__.py  _version.py  check.py  columns.py  render.py  scan.py  stub.py  unit.py  update.py
(+817 files in other folders)
